...
    @State private var selectedTab: Tab = .workout

    var body: some View {
        TabView(selection: $selectedTab) {
            LogWorkoutView()
                .tabItem {
                    Label("Log", systemImage: "plus.circle")
                }
                .tag(Tab.log)

            WorkoutView()
                .tabItem {
                    Label("Workout", systemImage: "figure.strengthtraining.traditional")
...
